fix: flow module arrow on mobile phone (2)

--- a/templates/g5_helium/custom/scss/main.compiled.css
+++ b/templates/g5_helium/custom/scss/main.compiled.css
@@ -874,6 +874,19 @@ form.fabrikForm .plg-date .fabrikElement .fabrikSubElementContainer button.calen
               color: var(--neutral-600);
             }
 /* YES / NO */
+form.fabrikForm .row-fluid .plg-yesno.span12 {
+      width: 48.93617021276595%;
+    }
+@media only all and (min-width: 48rem) and (max-width: 59.99rem) {
+      form.fabrikForm .row-fluid .plg-yesno.span12 {
+        width: 48.6187845304% !important;
+      }
+    }
+@media only all and (max-width: 48rem) {
+      form.fabrikForm .row-fluid .plg-yesno.span12 {
+        width: 100% !important;
+      }
+    }
 form.fabrikForm .plg-yesno .fabrikSubElementContainer .btn-group {
       display: flex;
       gap: var(--em-form-yesno-gap);
